# json-parser-cli

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.json  setup_release.sh
.github/workflows/: publish-testpypi.yml  release.yml
jsoncli/: cli.py  core.py
tests/: test_cli_query.py  test_core.py  test_core_fixture.py
tests/data/: sample.json
