[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json-parser-cli"
version = "0.3.2"
description = "A simple JSON CLI tool"
authors = [{name="Wezi Chipeta"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "flake8>=7.0", "mypy>=1.10"]
query = ["jmespath>=1.0", "jsonpath-ng>=1.6"]

[project.scripts]
jsoncli = "jsoncli.cli:main"
